--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
 	
 	<!-- Animate.css -->
-	<link rel="stylesheet" href="static/css/animate.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="static/css/icomoon.css">
+	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="static/css/bootstrap.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
 	<!-- Flexslider  -->
-	<link rel="stylesheet" href="static/css/flexslider.css">
+	<link rel="stylesheet" href="css/flexslider.css">
 	<!-- Flaticons  -->
-	<link rel="stylesheet" href="static/fonts/flaticon/font/flaticon.css">
+	<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 	<!-- Owl Carousel -->
-	<link rel="stylesheet" href="static/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="static/css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<!-- Theme style  -->
-	<link rel="stylesheet" href="static/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 
 	<!-- Modernizr JS -->
-	<script src="static/js/modernizr-2.6.2.min.js"></script>
+	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -56,7 +56,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(static/images/about.jpg);"></div>
+				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Portifolio</a></h1>
 				<span class="position"><a href="#">Data Scientist</a> in Zimbabwe</span>
 			</div>
@@ -93,7 +93,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(static/images/img_bg_1.jpg);">
+				   	<li style="background-image: url(images/img_bg_1.jpg);">
 				   		<div class="overlay" style="background: rgba(0,0,0,0.6);"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -109,7 +109,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   		</div>
 				   		</div>
 				   	</li>
-				   	<li style="background-image: url(static/images/img_bg_2.jpg);">
+				   	<li style="background-image: url(images/img_bg_2.jpg);">
 				   		<div class="overlay" style="background: rgba(0,0,0,0.6);"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -420,7 +420,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
 									            <p>Gained this certification in October 2024</p>
-									            <p><a href="static/docs/Bhekinkosi Moyo - Intro to Machine Learning.png" target="_blank" class="btn btn-primary btn-sm">View Certificate</a></p>
+									            <p><a href="docs/Bhekinkosi Moyo - Intro to Machine Learning.png" target="_blank" class="btn btn-primary btn-sm">View Certificate</a></p>
 									        </div>
 									    </div>
 									</div>
@@ -681,23 +681,23 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 	</div><!-- end:colorlib-page -->
 
 	<!-- jQuery -->
-	<script src="static/js/jquery.min.js"></script>
+	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
-	<script src="static/js/jquery.easing.1.3.js"></script>
+	<script src="js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
-	<script src="static/js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<!-- Waypoints -->
-	<script src="static/js/jquery.waypoints.min.js"></script>
+	<script src="js/jquery.waypoints.min.js"></script>
 	<!-- Flexslider -->
-	<script src="static/js/jquery.flexslider-min.js"></script>
+	<script src="js/jquery.flexslider-min.js"></script>
 	<!-- Owl carousel -->
-	<script src="static/js/owl.carousel.min.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
 	<!-- Counters -->
-	<script src="static/js/jquery.countTo.js"></script>
+	<script src="js/jquery.countTo.js"></script>
 	
 	
 	<!-- MAIN JS -->
-	<script src="static/js/main.js"></script>
+	<script src="js/main.js"></script>
 	
 	<script>
 		document.getElementById('contactForm').addEventListener('submit', function(e) {
