--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   					<div class="desc" style="background: rgba(255,255,255,0.1); padding: 40px; border-radius: 10px; backdrop-filter: blur(10px);">
 						   					<h1 style="color: #fff; text-shadow: 2px 2px 4px rgba(0,0,0,0.8); font-weight: 700;">Hi! <br>I'm Bhekinkosi Praise Moyo</h1>
 						   					<p style="color: #fff; font-size: 18px; margin: 20px 0; text-shadow: 1px 1px 2px rgba(0,0,0,0.7);">Data Scientist & Analytics Expert</p>
-												<p><a href="static/docs/curriculumn_vitae for bhekinkosiPraiseMoyo.pdf" class="btn btn-primary btn-learn" download style="background: #2c98f0; border: none; padding: 12px 30px; font-weight: 600;">Download CV <i class="icon-download4"></i></a></p>
+												<p><a href="docs/curriculumn_vitae for bhekinkosiPraiseMoyo.pdf" class="btn btn-primary btn-learn" download style="background: #2c98f0; border: none; padding: 12px 30px; font-weight: 600;">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
