--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💼</text></svg>">
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -76,57 +76,38 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright <script>document.write(new Date().getFullYear());</script> All rights reserved.
+				<p><small>&copy; Copyright <script>document.write(new Date().getFullYear());</script> All rights reserved.</small></p>
 				<ul>
-					<li><a href="#"><i class="icon-facebook2"></i></a></li>
-					<li><a href="#"><i class="icon-twitter2"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-					<li><a href="https://github.com/" target="_blank"><i class="icon-github"></i></a></li>
+					<li><a href="https://github.com/becky-moyo" target="_blank" title="GitHub"><i class="icon-github"></i></a></li>
+					<li><a href="https://api.whatsapp.com/send?phone=263787459664&text=I%20saw%20your%20portfolio%20and%20I%20am%20interested%20in%20hiring%20you" target="_blank" title="WhatsApp"><i class="icon-phone"></i></a></li>
+					<li><a href="mailto:bhekinkosipraisem@gmail.com?subject=I%20am%20interested%20in%20hiring%20you" title="Email"><i class="icon-mail"></i></a></li>
+					<li><a href="#" data-nav-section="contact" title="Contact"><i class="icon-bubble"></i></a></li>
 				</ul>
 			</div>
 
 		</aside>
 
 		<div id="colorlib-main">
-			<section id="colorlib-hero" class="js-fullheight" data-section="home">
-				<div class="flexslider js-fullheight">
-					<ul class="slides">
-				   	<li style="background-image: url(images/img_bg_1.jpg);">
-				   		<div class="overlay" style="background: rgba(0,0,0,0.6);"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-					   				<div class="slider-text-inner js-fullheight">
-					   					<div class="desc" style="background: rgba(255,255,255,0.1); padding: 40px; border-radius: 10px; backdrop-filter: blur(10px);">
-						   					<h1 style="color: #fff; text-shadow: 2px 2px 4px rgba(0,0,0,0.8); font-weight: 700;">Hi! <br>I'm Bhekinkosi Praise Moyo</h1>
-						   					<p style="color: #fff; font-size: 18px; margin: 20px 0; text-shadow: 1px 1px 2px rgba(0,0,0,0.7);">Data Scientist & Analytics Expert</p>
-												<p><a href="docs/curriculumn_vitae for bhekinkosiPraiseMoyo.pdf" class="btn btn-primary btn-learn" download style="background: #2c98f0; border: none; padding: 12px 30px; font-weight: 600;">Download CV <i class="icon-download4"></i></a></p>
-											</div>
-					   				</div>
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-				   	<li style="background-image: url(images/img_bg_2.jpg);">
-				   		<div class="overlay" style="background: rgba(0,0,0,0.6);"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-					   				<div class="slider-text-inner">
-					   					<div class="desc" style="background: rgba(255,255,255,0.1); padding: 40px; border-radius: 10px; backdrop-filter: blur(10px);">
-						   					<h1 style="color: #fff; text-shadow: 2px 2px 4px rgba(0,0,0,0.8); font-weight: 700;">I am <br>a Data Analyst</h1>
-						   					<p style="color: #fff; font-size: 18px; margin: 20px 0; text-shadow: 1px 1px 2px rgba(0,0,0,0.7);">Transforming Data into Insights</p>
-												<p><a href="#" data-nav-section="work" class="btn btn-primary btn-learn" style="background: #2c98f0; border: none; padding: 12px 30px; font-weight: 600;">View Portfolio <i class="icon-briefcase3"></i></a></p>
-											</div>
-					   				</div>
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-				  	</ul>
-			  	</div>
+			<section id="colorlib-hero" class="js-fullheight" data-section="home" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); position: relative;">
+				<div class="overlay" style="background: rgba(0,0,0,0.3); position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
+				<div class="container-fluid js-fullheight">
+					<div class="row js-fullheight">
+						<div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12 js-fullheight" style="display: flex; align-items: center; justify-content: center;">
+							<div class="hero-content" style="text-align: center; z-index: 2; position: relative;">
+								<h1 style="color: #fff; font-size: 3.5rem; font-weight: 700; margin-bottom: 20px; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">Hi! I'm Bhekinkosi Praise Moyo</h1>
+								<h2 id="typewriter" style="color: #fff; font-size: 1.8rem; font-weight: 400; margin-bottom: 30px; min-height: 60px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);"></h2>
+								<div class="hero-buttons" style="margin-top: 40px;">
+									<a href="docs/curriculumn_vitae for bhekinkosiPraiseMoyo.pdf" class="btn btn-primary btn-lg" download style="background: #2c98f0; border: none; padding: 15px 35px; font-weight: 600; border-radius: 5px;">Download CV <i class="icon-download4"></i></a>
+								</div>
+								<div class="social-links" style="margin-top: 30px;">
+									<a href="https://github.com/becky-moyo" target="_blank" style="color: #fff; font-size: 24px; margin: 0 15px; transition: all 0.3s ease;" title="GitHub"><i class="icon-github"></i></a>
+									<a href="https://api.whatsapp.com/send?phone=263787459664&text=I%20saw%20your%20portfolio%20and%20I%20am%20interested%20in%20hiring%20you" target="_blank" style="color: #fff; font-size: 24px; margin: 0 15px; transition: all 0.3s ease;" title="WhatsApp"><i class="icon-phone"></i></a>
+									<a href="mailto:bhekinkosipraisem@gmail.com?subject=I%20am%20interested%20in%20hiring%20you" style="color: #fff; font-size: 24px; margin: 0 15px; transition: all 0.3s ease;" title="Email"><i class="icon-mail"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</section>
 
 			<section class="colorlib-about" data-section="about">
@@ -464,7 +445,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Strategic Information and Evaluation Officer</a> <span>Jan 2024- December 2024</span></h2>
+					                  <h2><a href="#">Strategic Information and Evaluation Officer</a> <span>January 2024 to December 2024</span></h2>
 					                  <p>Assisted in spearheading, monitor and track progress of various researches while utilizing a data scientist's package</p>
 					               </div>
 					            </div>
@@ -477,7 +458,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Researcher</a> <span>2017-2018</span></h2>
+					               	<h2><a href="#">Researcher</a> <span>2022 to date</span></h2>
 					                  <p>I was involved in a team that conducted primary researches through research completion that include the project start and its endline</p>
 					               </div>
 					            </div>
@@ -490,7 +471,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Excel Data Analyst</a> <span>2022-2025</span></h2>
+					               	<h2><a href="#">Excel Data Analyst</a> <span>2022 to 2025</span></h2>
 					                  <p>Applied excel advanced techniques such Pivot Charts, Pivot tables, Excel Macro, What If Analysis and basic excel functions including X, V and H -Look Up functions</p>
 					               </div>
 					            </div>
@@ -766,6 +747,62 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 		// Auto-count projects
 		const projectCount = document.querySelectorAll('.project').length;
 		document.getElementById('projectCount').textContent = projectCount;
+		
+		// Typewriter effect
+		const typewriterText = [
+			"Data Scientist & Analytics Expert",
+			"Machine Learning Engineer",
+			"Statistical Analysis Specialist",
+			"Data Visualization Expert"
+		];
+		
+		let textIndex = 0;
+		let charIndex = 0;
+		let isDeleting = false;
+		const typeSpeed = 100;
+		const deleteSpeed = 50;
+		const pauseTime = 2000;
+		
+		function typeWriter() {
+			const currentText = typewriterText[textIndex];
+			const typewriterElement = document.getElementById('typewriter');
+			
+			if (!isDeleting) {
+				typewriterElement.textContent = currentText.substring(0, charIndex + 1);
+				charIndex++;
+				
+				if (charIndex === currentText.length) {
+					isDeleting = true;
+					setTimeout(typeWriter, pauseTime);
+					return;
+				}
+			} else {
+				typewriterElement.textContent = currentText.substring(0, charIndex - 1);
+				charIndex--;
+				
+				if (charIndex === 0) {
+					isDeleting = false;
+					textIndex = (textIndex + 1) % typewriterText.length;
+				}
+			}
+			
+			setTimeout(typeWriter, isDeleting ? deleteSpeed : typeSpeed);
+		}
+		
+		// Start typewriter effect
+		typeWriter();
+		
+		// Social links hover effects
+		document.querySelectorAll('.social-links a').forEach(function(link) {
+			link.addEventListener('mouseenter', function() {
+				this.style.transform = 'scale(1.2)';
+				this.style.color = '#2c98f0';
+			});
+			link.addEventListener('mouseleave', function() {
+				this.style.transform = 'scale(1)';
+				this.style.color = '#fff';
+			});
+		});
 	</script>
 
 	</body>
