--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
 						<div class="col-md-7 col-md-push-1">
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
-									<form action="https://formspree.io/f/xpwagdvr" method="POST" id="contactForm">
+									<form action="https://formspree.io/f/bhekinkosipraisem@gmail.com" method="POST" id="contactForm">
 										<div class="form-group">
 											<input type="text" class="form-control" placeholder="Name" name="name" required>
 										</div>
