--- a/index.html
+++ b/index.html
@@ -388,6 +388,11 @@
 										      			<p>From May 2022 to November2025</p>
 										      		</div>
 										      	</div>
+										      	<div class="row">
+										      		<div class="col-md-12">
+										      			<p><a href="transcript.html" class="btn btn-primary btn-sm">View Transcript</a></p>
+										      		</div>
+										      	</div>
 									         </div>
 									    </div>
 									</div>
