--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>I am happy to know you <br>that <span id="projectCount">7</span> projects done sucessfully!</h2>
+										<h2>I am happy to know you <br>that <span id="projectCount">7</span> projects were done sucessfully!</h2>
 										<a href="mailto:bhekinkosipraisem@gmail.com?subject=I%20am%20interested%20in%20hiring%20you" class="btn-hire">Hire me</a>
 									</div>
 								</div>
