--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-globe-outline"></i></span>
-										<h3>Web Scraping, ETL</h3>
+										<h3>ETL</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
@@ -191,7 +191,7 @@
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Web Scraping, ETL </h3>
+									<h3>ETL </h3>
 									<p>Data for use is not always available thus why i have ingested sufficient time comprehensively understand these concepts. Since it is obtained from various, it can be messy thus the need for ETL.</p>
 								</div>
 							</div>
@@ -260,9 +260,9 @@
 							<div class="progress-wrap">
 								<h3>Python</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
-								    <span>90%</span>
+								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+								    <span>85%</span>
 								  	</div>
 								</div>
 							</div>
@@ -271,20 +271,20 @@
 							<div class="progress-wrap">
 								<h3>R</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="60"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
-								    <span>85%</span>
+								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="35"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:35%">
+								    <span>35%</span>
 								  	</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>PowerBI</h3>
+								<h3>PowerBI/Tableau</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="85"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-								    <span>80%</span>
+								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="75"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+								    <span>75%</span>
 								  	</div>
 								</div>
 							</div>
@@ -302,11 +302,11 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Flask/Django</h3>
+								<h3>Flask</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								    <span>70%</span>
+								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="65"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
+								    <span>65%</span>
 								  	</div>
 								</div>
 							</div>
@@ -317,7 +317,7 @@
 								<div class="progress">
 								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-								    <span>95%</span>
+								    <span>80%</span>
 								  	</div>
 								</div>
 							</div>
@@ -328,7 +328,7 @@
 								<div class="progress">
 								 	<div class="progress-bar color-7" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-								    <span>85%</span>
+								    <span>80%</span>
 								  	</div>
 								</div>
 							</div>
@@ -337,20 +337,9 @@
 							<div class="progress-wrap">
 								<h3>Github</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="80"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-								    <span>95%</span>
-								  	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="progress-wrap">
-								<h3>Google Cloud Platform</h3>
-								<div class="progress">
-								 	<div class="progress-bar color-8" role="progressbar" aria-valuenow="80"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-								    <span>95%</span>
+								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="65"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
+								    <span>65%</span>
 								  	</div>
 								</div>
 							</div>
